# angular-bazel-bug-illegal-state

./: BUILD.bazel  WORKSPACE  package.json
src/: BUILD.bazel
src/mymodule/: BUILD.bazel  index.ts  mycomponent.ts
src/shared/: BUILD.bazel  index.ts
